[gd_scene load_steps=4 format=3 uid="uid://cr5myk64gyok3"]

[ext_resource type="Texture2D" uid="uid://c1voi4mbtyr5t" path="res://Art/Test/White16.png" id="1_ayrsk"]
[ext_resource type="Script" path="res://Scripts/InteractableCompanion.gd" id="2_gya5v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxos6"]
size = Vector2(24, 24)

[node name="InteractableCompanion" type="Sprite2D"]
modulate = Color(0.254902, 0.478431, 1, 1)
texture = ExtResource("1_ayrsk")
script = ExtResource("2_gya5v")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pxos6")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
